Bug 166652 - Empty line height does not follow paragraph's proportional line spacing <100%
Summary: Empty line height does not follow paragraph's proportional line spacing <100%
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL: https://ask.libreoffice.org/t/in-writ...
Whiteboard: target:25.8.0 target:25.2.4
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-19 19:19 UTC by Mike Kaganski
Modified: 2025-06-14 19:26 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Line spacing 80% + empty lines (2.70 KB, application/vnd.oasis.opendocument.text)
2025-05-19 19:19 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-05-19 19:19:12 UTC
Created attachment 200876 [details]
Line spacing 80% + empty lines

The attached  document has two sets of paragraphs side by side. The only difference is that the left set has empty paragraphs, while corresponding paragraphs of the right set have dashes. The paragraph style used by the text has line spacing proportional 80%.

The total height of left paragraphs (with empty lines) is clearly taller than that of right paragraphs. Adding any text to all empty lines makes the heights identical.

Exporting the document to ODT, and opening it with OOo / AOO gives identical heights of both blocks. Exporting the document to OOXML and opening in Word also gives identical heights of blocks.

The different heights are already reproducible in LO 3.3. This is both a regression (possibly from Go-OO?) and interoperability problem.
Comment 1 Mike Kaganski 2025-05-19 19:47:36 UTC
https://gerrit.libreoffice.org/c/core/+/185542
Comment 2 Commit Notification 2025-05-20 05:09:08 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9ab2578b3a832e75ad3c71477ad1850be236cc3f

tdf#166652: do not use FormatEmpty for proportional spacing < 100%

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-05-20 07:36:27 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/786fbd5afaa77818df1494bfbc82d7e3bb18b9dc

tdf#166652: do not use FormatEmpty for proportional spacing < 100%

It will be available in 25.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Piotr Osada 2025-06-14 19:26:48 UTC
Verified:

In:
Version: 25.2.4.3 (X86_64) / LibreOffice Community
Build ID: 33e196637044ead23f5c3226cde09b47731f7e27
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: pl-PL (pl_PL); UI: en-US
Calc: CL threaded

Empty line with style 80% line spacing have 80% line spacing.
And thus attachment 200876 [details] table column height are equal.



In:
Version: 24.8.7.2 (X86_64) / LibreOffice Community
Build ID: e07d0a63a46349d29051da79b1fde8160bab2a89
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: pl-PL (pl_PL); UI: pl-PL
Calc: CL threaded

Empty line with style 80% line spacing have 100% line spacing.
So attachment 200876 [details] table column height are different.